crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__footnote-codeblock-end.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
ref<ref><pre>code only</pre></ref>

<references />
