crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__footnote-multipara.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
ref<ref>first paragraph

second paragraph</ref>

<references />
