crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__footnote-simple.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
ref<ref>the note body</ref>

<references />
