crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__header-attr.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<span id="anchor"></span>
= Titled =
