crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__header-unnumbered.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<span id="hidden"></span>
= Hidden =
