crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__headers.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<span id="one"></span>
= One =

<span id="two"></span>
== Two ==

<span id="six"></span>
====== Six ======
