crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__inline-code-backtick.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
use <code>a `b` c</code> here
