crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__inline-code-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
before <code>a &amp; b ~ c \ d % e # f $ g _ h { i } j ^ k | l &lt; m &gt; n</code> after
